crates/rustframe/tests/ui/fail/injectable_non_arc.rs
use rustframe::Injectable;

#[derive(Injectable)]
struct InvalidProvider {
    dependency: String,
}

fn main() {}
